# biotope

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  example_protein_sequences.fasta_metadata.json  mkdocs.nav.yml  mkdocs.yml  my-data_metadata.json  pyproject.toml  release-please-config.json  versions.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: docs_mkdocs.yaml  main.yml  release-please.yaml  test.yml
0.1.3/: 404.html  index.html  sitemap.xml
0.1.3/api-docs/annotate/: index.html
0.1.3/api-docs/chat/: index.html
0.1.3/api-docs/init/: index.html
0.1.3/api-docs/read/: index.html
0.1.3/api-docs/view/: index.html
0.1.3/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/api-docs/annotate/: index.html
0.2.0/api-docs/chat/: index.html
0.2.0/api-docs/init/: index.html
0.2.0/api-docs/read/: index.html
0.2.0/api-docs/view/: index.html
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html  objects.inv  sitemap.xml
0.2.1/api-docs/annotate/: index.html
0.2.1/api-docs/chat/: index.html
0.2.1/api-docs/init/: index.html
0.2.1/api-docs/read/: index.html
0.2.1/api-docs/view/: index.html
0.2.1/search/: search_index.json
0.2.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2.2/api-docs/annotate/: index.html
0.2.2/api-docs/chat/: index.html
0.2.2/api-docs/init/: index.html
0.2.2/api-docs/read/: index.html
0.2.2/api-docs/view/: index.html
0.2.2/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/api-docs/add/: index.html
0.3.0/api-docs/annotate/: index.html
0.3.0/cluster-compliance/: index.html
0.3.0/examples/: index.html
0.3.0/git-integration/: index.html
0.3.0/git-integration-dev/: index.html
0.3.0/search/: search_index.json
0.3.3/: 404.html  index.html  sitemap.xml
0.3.3/cluster-compliance/: index.html
0.3.3/examples/: index.html
0.3.3/git-integration/: index.html
0.3.3/git-integration-dev/: index.html
0.3.3/search/: search_index.json
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/cluster-compliance/: index.html
0.4.0/examples/: index.html
0.4.0/git-integration/: index.html
0.4.0/git-integration-dev/: index.html
0.4.0/search/: search_index.json
0.4.1/: 404.html  index.html  objects.inv  sitemap.xml
0.4.1/cluster-compliance/: index.html
0.4.1/examples/: index.html
0.4.1/git-integration/: index.html
0.4.1/git-integration-dev/: index.html
0.4.1/search/: search_index.json
0.4.2/: 404.html  index.html  sitemap.xml
0.4.2/cluster-compliance/: index.html
0.4.2/examples/: index.html
0.4.2/git-integration/: index.html
0.4.2/git-integration-dev/: index.html
0.4.2/search/: search_index.json
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.0/cluster-compliance/: index.html
0.5.0/examples/: index.html
0.5.0/git-integration/: index.html
0.5.0/git-integration-dev/: index.html
0.5.0/search/: search_index.json
0.7.0/: 404.html  index.html  sitemap.xml
0.7.0/architecture/: index.html
0.7.0/cluster-compliance/: index.html
0.7.0/examples/: remote-validation-server.py
0.7.0/project-context/: index.html
0.7.0/search/: search_index.json
0.7.0/tutorial/: index.html
0.7.1/: 404.html  index.html  objects.inv  sitemap.xml
0.7.1/architecture/: index.html
0.7.1/cluster-compliance/: index.html
0.7.1/examples/: airport-hubs.csv  cluster-requirements.json
0.7.1/project-context/: index.html
0.7.1/search/: search_index.json
0.7.1/stylesheets/: extra.css
0.7.1/tutorial/: index.html
biotope/: __init__.py  __main__.py  _version.py  cli.py  metadata.py  project_model.py  scrape.py  utils.py  validation.py
biotope/commands/: add.py  annotate.py  benchmark.py  build.py  chat.py  check_data.py  commit.py  config.py  describe.py  discover.py  get.py  init.py  log.py  map.py  map_wizard.py  mark.py  mv.py  propose_alignment.py  propose_mapping.py  pull.py  push.py  queue.py  read.py  rm.py  search.py  status.py  view.py
biotope/croissant/: __init__.py  api.py  biocypher_labels.py  build_runtime.py  spec.py
biotope/registry/: __init__.py  biocontext.py  biotools.py  manager.py
biotope/templates/: AGENTS.md
docs/: architecture.md  cluster-compliance.md  commands.md  git-integration-dev.md  git-integration.md  index.md  project-context.md  tutorial.md
docs/api-docs/: add.md  annotate.md  benchmark.md  build.md  chat.md  config.md  describe.md  discover.md  get.md  init.md  map.md  propose-alignment.md  propose-mapping.md  read.md  search.md  view.md
docs/examples/: airports-notes.md  cluster-compliance-checker.py
docs/implementation-plans/: registry-integration.md
skill/: SKILL.md
skill/references/: mapping.md  output-targets.md  reliability.md
skills/biochatter/: SKILL.md
skills/biocypher/: SKILL.md
skills/biotope-croissant/: SKILL.md
tests/: conftest.py  example_gene_expression.csv  example_protein_sequences.fasta
tests/commands/: test_add.py  test_annotate.py  test_annotate_incomplete.py  test_annotate_staged.py  test_check_data.py  test_get.py  test_get_ingress.py  test_mv.py  test_remote_validation.py  test_search.py  test_status_mcp.py  test_status_validation.py  test_status_workflow.py  test_validation_patterns.py
tests/croissant/: conftest.py  test_acquisition.py  test_acquisition_locations.py  test_alignment.py  test_baker_layout.py  test_build_runtime.py  test_codegen.py  test_croissant_reader.py  test_drift.py  test_inspector.py  test_mapping.py  test_preview.py  test_registry.py  test_scaffold.py  test_selectors.py
tests/integration/: test_get_integration.py
tests/unit/: test_biocypher_labels.py  test_build_cli.py  test_chat.py  test_cli.py  test_describe.py  test_git_commands.py  test_init.py  test_init_git.py  test_map_errors.py  test_mark_and_queue.py  test_metadata_status.py  test_mv_multifile.py  test_registry.py  test_rm.py  test_scrape.py  test_search_ranking.py  test_utils.py  test_view.py  test_wizard_axis_edit.py  test_wizard_intent_sync.py  test_wizard_status_flip.py
(+128 files in other folders)
