################################################################################
# Build Configuration
################################################################################

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

################################################################################
# Project Configuration (PEP 621)
################################################################################

[project]
name = "biotope"
version = "0.7.0"
description = "CLI integration for BioCypher ecosystem packages"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sebastian Lobentanzer", email = "sebastian.lobentanzer@gmail.com" },
]
keywords = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "click>=8.1.8,<9",
    "rich>=13.9.4,<16.0.0",
    "PyYAML>=6.0,<7",
    "mlcroissant>=1.0.13,<2",
    # requests >=2.32 pulls patched urllib3 >=2.7 and idna >=3.15 via its
    # current dependency floor, addressing GHSA-* alerts on those transitives.
    "requests>=2.32.0,<3",
    "pydantic>=2.6,<3",
    "jinja2>=3.1.6,<4",
    "duckdb>=1.0,<2",
    "croissant-baker>=0.3,<1",
    # `head_ontology: null` headless-mode support landed in 0.14.0 (PR #523).
    # The generated `build/create_knowledge_graph.py` relies on it.
    "biocypher>=0.14.0,<1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0",
    # >=9.0.3 fixes GHSA-7f96-r2m9-pmvw (tmpdir handling).
    "pytest>=9.0.3",
    "bump2version>=1.0.1",
    # >=9.6.20 pulls pymdown-extensions >=10.21.3, fixing the snippets path
    # traversal bypass (GHSA-fwjp-95j2-2v8w).
    "mkdocs-material>=9.6.20",
    "mike>=2.1.3",
    "mkdocstrings-python>=1.16.10",
]
# biochatter (used by `biotope chat`) is intentionally not declared here:
# it pins pillow<11 and conflicts with croissant-baker's pillow>=12.2.
# Install it explicitly when needed: `uv pip install biochatter`.

[project.urls]
Homepage = "https://github.com/biocypher/biotope"
"Source Code" = "https://github.com/biocypher/biotope"
"Bug Tracker" = "https://github.com/biocypher/biotope/issues"
Documentation = "https://biocypher.org"
Download = "https://pypi.org/project/biotope/#files"

[project.scripts]
biotope = "biotope.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["biotope"]

################################################################################
# Tool Configuration
################################################################################

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["raises"]

[tool.coverage.paths]
source = [
    "biotope",
    "*/site-packages/biotope",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
precision = 2

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D107",  # 'Missing docstring in __init__' ignored because pydoclint wants us to document the class instead.
    "D203",  # '1 blank line required before class docstring' ignored because we want no blank line.
    "D212",  # 'Multi-line docstring summary should start at the first line' ignored because we want the summary to start on the second line.
    "D407",  # 'Missing dashed underline after section' ignored because Google style docstrings don't underline.
    "ANN002",  # 'Missing type annotation for {*args} in method'.
    "ANN003",  # 'Missing type annotation for {*kwargs} in method'.
    "ANN101",  # 'Missing type annotation for {self} in method'.
    "ANN102",  # 'Missing type annotation for {cls} in classmethod'.
]
exclude = [
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "E401",  # 'Multiple imports on one line'
    "E402",  # 'Module level import not at top of file'
    "F401",  # 'Imported but unused'
    "I001",  # 'Import block is un-sorted or un-formatted' ignored because we may have to import in a particular, not-alphabetical order.
]
"tests/**/*.py" = [
    "S101",  # 'Use of assert detected' ignored because we are using pytest.
    "INP001",  # 'Insecure input' ignored because we are testing.
    "ANN201",  # 'Missing type annotation for {return}' ignored because all tests return `None`.
]

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["biotope"]
lines-after-imports = 2

[tool.pydoclint]
style = "google"  # TODO: Other styles are possible here, like 'numpy'
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
# CLI command bodies routinely raise to surface errors to click; documenting
# every Raises clause is noise. Args injected by click decorators are likewise
# not interesting to repeat in docstrings.
skip-checking-raises = true
